--- a/groupsite/Terms.css
+++ b/groupsite/Terms.css
@@ -43,7 +43,7 @@ background-color: black;
   font-size: 16px;
   border: none;
 
-  /*background: rgba( 255, 255, 255, 0.25 ); */
+  background: rgba( 255, 255, 255, 0.25 ); 
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
@@ -131,7 +131,7 @@ background-color: black;
     color: rgb(255, 255, 255);
   }
   .image2 {
-    background: url(images/A\ soothing\ wallpaper.jfif) no-repeat fixed;
+    background: url(images/bgs/6053830.jpg) no-repeat fixed;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -266,7 +266,7 @@ width: 65%;
 }
 
 .image4 {
-  background: url(images/codioful-formerly-gradienta-W75no7rGSLk-unsplash.jpg) no-repeat fixed;
+  background: url(images/bgs/6053830.jpg) no-repeat fixed;
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -424,7 +424,7 @@ html {
   transform: scale(1.4);
 }
 
-/* what i used to make the new nav bar  */
+/* what is used to make the new nav bar  */
 
 
 .sbn-list {
