--- a/groupsite/Terms.css
+++ b/groupsite/Terms.css
@@ -381,6 +381,81 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 
 
 
+
+
+#article3.grid_12:before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  filter: blur(10px);
+  margin: -20px;
+  text-decoration: none;
+}
+
+.image6 {
+  background: url(images/maxim-berg-lnvpji4fC3c-unsplash.jpg) no-repeat fixed;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;  
+  width: 100%
+
+}
+
+.imagetxt6 {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.centered6 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  width: 65%;
+}
+
+.sd {
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  width: 65%;
+}
+
+
+
+.centered6 {
+background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+
+
+
+
+
+
+
+
+
+
+
 html {
   scroll-behavior: smooth;
 }
