--- a/groupsite/payments/pay.css
+++ b/groupsite/payments/pay.css
@@ -57,6 +57,7 @@ body {
 
 .container form .inputBox {
 	margin-top: 20px;
+	width: 100%;
 }
 
 .container form .inputBox span {
@@ -72,6 +73,7 @@ body {
 	border-radius: 10px;
 	border: 1px solid rgba(0, 0, 0, .3);
 	color: #444;
+	text-transform: uppercase;
 }
 
 .container form .flexbox {
@@ -81,6 +83,7 @@ body {
 	/* Added flex-wrap */
 	display: flex;
 	gap: 15px;
+	width: 100%;
 }
 
 .container form .flexbox .inputBox {
@@ -97,6 +100,7 @@ body {
 	border-radius: 10px;
 	cursor: pointer;
 	transition: .2s linear;
+	text-transform: uppercase;
 }
 
 .container form .submit-btn:hover {
